[package]
name = "clearmodel"
version = "0.1.0"
edition = "2021"
authors = ["Griffin Strier <griffin@example.com>"]
description = "Secure ML model cache cleaner with path traversal protection"
license = "MIT"
repository = "https://github.com/user/clearmodel"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging and error handling
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
anyhow = "1.0.86"
thiserror = "1.0.63"

# Path manipulation and security
camino = "1.1.9"  # UTF-8 paths
path-clean = "1.0.1"  # Path normalization
sanitize-filename = "0.5.0"  # Filename sanitization

# Environment and configuration
dotenvy = "0.15.7"  # .env file loading
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
config = "0.14.0"  # Configuration management

# File operations
walkdir = "2.5.0"  # Safe directory traversal
fs_extra = "1.3.0"  # Extended file operations
filetime = "0.2.23"  # File time operations

# System information
sysinfo = "0.32.0"  # System information
home = "0.5.9"  # Home directory detection

# Security
secrecy = "0.8.0"  # Secret management
zeroize = "1.8.1"  # Memory zeroing

# Concurrency and performance
rayon = "1.10.0"  # Data parallelism
dashmap = "6.0.1"  # Concurrent hashmap
once_cell = "1.19.0"  # Lazy static initialization

# CLI
clap = { version = "4.5.16", features = ["derive", "env"] }
rpassword = "7.3.1"  # Secure password input

# Additional serialization
toml = "0.8.19"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.12.0"  # Temporary files for testing
assert_fs = "1.1.1"  # Filesystem testing utilities
proptest = "1.5.0"  # Property-based testing

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 